# final-hms

./: .coveragerc  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .lizard.yml  .mypy.ini  .npmrc  .pip.conf  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .pylintrc  .quality_config.json  .roomodes  .semgrep.yml  1753683755292-30b3431f487b4cc1863e57a81d78e289.sh  =25.0  =4.0.0  AGENTS.md  API_DOCUMENTATION.md  BACKEND_COMPREHENSIVE_TESTING_FINAL_REPORT.md  CERTIFICATION_ACHIEVEMENT_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.enterprise  ENTERPRISE_CERTIFICATION_FINAL_REPORT.md  ENTERPRISE_FIXES.md  ENTERPRISE_GRADE_SUMMARY.md  ENTERPRISE_REDUNDANCY_ANALYSIS_REPORT.md  FINAL_SUMMARY.md  HMS_ENTERPRISE_PERFORMANCE_COMPREHENSIVE_REPORT_20250917_173031.json  HMS_ENTERPRISE_PERFORMANCE_FINAL_REPORT.py  HMS_PERFORMANCE_SUMMARY_20250917_173031.html  HMS_PERFORMANCE_SUMMARY_20250926_042502.html  (+106 more)
.github/: dependabot.yml  labeler.yml  quality-gates.yml
.hive-mind/: config.json
.mentat/: format.sh
.swarm/: memory.db-shm  memory.db-wal
backend/: Dockerfile  bandit-core-report.json  bandit-results.json  check_users.py  conftest.py  database_checklist.json  database_report.json  exceptions.py  final-bandit-report.json  manage.py  mypy-report.txt  pytest-results.txt  pytest.ini  requirements.txt  urls.py  wsgi.py
cloudflare/: cdn-config.json
compliance/: audit_trail.py  compliance_checklist.json  compliance_report.json  data_protection_policy.md  gdpr_compliance.md  hipaa_compliance.md  training_programs.md
config/: .env.template  cdn-config.example.json
cqrs/: __init__.py  command-handler.py  cqrs-api.py  event-store.py  projector.py  query-handler.py
disaster-recovery/: dr-config.yaml
docs/: COMPREHENSIVE_PERFORMANCE_OPTIMIZATION_SUMMARY.md  ENTERPRISE_TRANSFORMATION_COMPLETION_REPORT.md  ENTERPRISE_TRANSFORMATION_PLAN.md  FRONTEND_BUNDLE_OPTIMIZATION.md  HMS_PERFORMANCE_OPTIMIZATION_REPORT.md  NAVIGATION.md  PERFORMANCE_EXECUTIVE_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  api.md  deployment-scaling-guide.md  security-action-plan.md  security-compliance-report.md  testing_strategy.md
e2e-tests/: .env.example  package.json  playwright.config.ts
frontend/: .eslintrc.cjs  Dockerfile  FRONTEND_ZERO_BUG_VALIDATION_REPORT.md  README_HEALTHCARE_UI_UX_PERFECTION.md  eslint.config.js  index.html  jest.config.js  npm-audit-results.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.optimized.ts  vite.config.ts  vite.performance.config.ts
hms_env/: pyvenv.cfg
integration/: orchestrator.py
integration_tests/: test_basic.py
istio/: gateway.yaml  istio-operator.yaml
k8s/: api-gateway-config.yaml  circuit-breakers.yaml  configmap.yaml  database-scaling.yaml  deployment-backend.yaml  deployment-frontend.yaml  enterprise-deployment.yaml  event-driven-architecture.yaml  hms-deployment-optimized.yaml  hpa-enterprise.yaml  hpa.yaml  ingress.yaml  istio-full-mesh.yaml  istio-gateway.yaml  jaeger.yaml  kafka.yaml  kong.yaml  microservices.yaml  monitoring-stack.yaml  namespace.yaml  otel-collector.yaml  secrets.yaml  service-backend.yaml  service-discovery.yaml
kubernetes/: hms-performance.yaml
load_tests/: hms_load_test.py  websocket_locust_test.py  websocket_performance_test.py
loadtest/: k6_appointments_slots.js
multi-region/: automated-failover.yaml  cluster-config.yaml  database-replication.yaml  disaster-recovery.yaml  dns-routing.yaml  monitoring-global.yaml
nginx/: nginx.conf  nginx.optimized.conf
observability/: enterprise-monitoring.yml  istio-mtls.yaml
performance_env/: pyvenv.cfg
quality_env/: pyvenv.cfg
quality_framework/: continuous_quality_integration.py  healthcare_test_automation.py  implementation_demo.py  master_quality_control.py  quality_metrics_dashboard.py  standalone_demo.py  zero_defect_quality_framework.py
reports/: CODE_QUALITY_ANALYSIS_REPORT.md  ENTERPRISE_GRADE_COMPREHENSIVE_TRANSFORMATION_REPORT.md  ENTERPRISE_GRADE_STANDARDIZATION_REPORT.md  ENTERPRISE_TRANSFORMATION_ROADMAP.md  HMS_ENTERPRISE_PERFORMANCE_COMPREHENSIVE_REPORT_20250926_042502.json  HMS_PERFORMANCE_EXECUTIVE_SUMMARY_20250926_042502.md  REDUNDANCY_ELIMINATION_COMPLETION_REPORT.md  ULTIMATE_COMPREHENSIVE_HMS_ANALYSIS_REPORT.md  certification_executive_summary.md  dependency_validation_report.json  executive_summary.md  gitignore_validation_20250917_003943.text  microservices_analysis_report.json  (+18 more)
(+1106 files in other folders)
